--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ul>
+		<li data-ns-test="shoppingList">Roti</li>
+		<li data-ns-test="shoppingList">Kapda</li>
+		<li data-ns-test="shoppingList">Makan</li>
+	</ul>
+	<ol>
+		<li data-ns-test="holidayList">Ladakh</li>
+		<li data-ns-test="holidayList">Kathmandu</li>
+		<li data-ns-test="holidayList">Kashmir</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
